flux/trusted/talosctl/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: talosctl
  labels:
    network-zone: trusted
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
