flux/trusted/talosctl/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talosctl
  namespace: talosctl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: talosctl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: talosctl
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: toolbox
          image: busybox:1.36.1
          imagePullPolicy: IfNotPresent
          command:
            - sleep
            - "2147483647"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: talosctl-bin
              mountPath: /opt/talosctl
              readOnly: true
            - name: talosconfig
              mountPath: /var/run/secrets/talos.dev
              readOnly: true
      volumes:
        - name: talosctl-bin
          emptyDir: {}
        - name: talosconfig
          secret:
            secretName: talosconfig
            items:
              - key: config
                path: config
